<resources>
    <string name="app_name">ConsulMed</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contrasena</string>
    <string name="text_button_login">Login</string>
    <string name="textview_donthaveaccount">¿ No tienes cuenta ?, </string>
    <string name="textview_createhere">Crea una aqui</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_ci">Cedula</string>
    <string name="text_button_form">Enviar</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="username_card">Nombre  Medico</string>
    <string name="firstword_card">Hace</string>
    <string name="dateCard_text">19-12-2017</string>
    <string name="likeNumberCard_text">4 Like</string>
    <string name="search_tab">Search</string>
    <string name="home_tab">Home</string>
    <string name="profile_tab">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameDetail">Paola Del Monte</string>
    <string name="likeNumberDetail">10</string>
    <string name="likeSecondWord">Me Gusta</string>
    <string name="TitleDetail">Especialidades</string>
    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus auctor erat sed commodo malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla viverra vehicula mauris quis consectetur. Ut sed malesuada magna. Donec dignissim leo sit amet ex convallis commodo. Nunc vel ante ac ligula lobortis laoreet. Aliquam consequat dictum sapien a sagittis. Nunc tempor non nunc nec sollicitudin. Aliquam erat magna, ullamcorper a porta eget, ultricies id neque. Aenean risus elit, pellentesque nec efficitur et, laoreet quis mi. Aenean ullamcorper ipsum aliquet neque tristique pretium. Mauris dictum risus in lorem luctus, in malesuada eros ultricies. Nam blandit tristique neque, vel egestas nisl porttitor et.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
